--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="https://tvp0ine6f0e4t5prjal4fk90e5bsai3cfrr36d908m4104po3k8g.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
+  <div class="image">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"/>
+  </div>  
   </body>  
 </html>
